I have added a lorem

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     <h1>this my first project our uploaded to github</h1>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Atque in accusamus nobis qui at asperiores voluptate, ducimus quidem deserunt quibusdam non consequuntur? Illo asperiores delectus aperiam beatae assumenda hic. Earum.</p>
+    
     
 </body>
 </html>
